Modify Documentation & FormRequest & Feature Test & Readme.md
