# app/Http/Controllers/api/CategoryController.php
@@ -5,8 +5,7 @@ namespace App\Http\Controllers\api;
 use App\Http\Controllers\API\APIController;
 use Illuminate\Http\Request;
 use App\Services\CategoryService;
-use Validator;
-use Illuminate\Database\QueryException;
+use App\Http\Requests\Category\AddCategoryFormRequest;
 
 class CategoryController extends APIController
 {
@@ -22,13 +21,30 @@ class CategoryController extends APIController
      *
      * @return \Illuminate\Http\Response
      */
+    /**
+    * @OA\Get(
+    *     path="/api/category",
+    *     tags={"Category"},
+    *     summary="Get list of categories",
+    *     description="Get list of categories",
+    *     @OA\Response(
+    *         response="200",
+    *         description="Categories fetched."
+    *     ),
+    *     @OA\Response(
+    *         response="500",
+    *         description="Server Internal Error."
+    *     ),
+    * )
+    * Returns list of categories
+    */
     public function index()
     {
         try {
             return $this->sendResponse($this->categoryService->getAll(), 'Category fetched.');
-        } catch (QueryException $e) {
-            echo $e;
-            return $this->sendError('Server Internal Error.', 500);
+        } catch (\Exception $e) {
+            $exMessage = $e->getMessage();
+            return $this->sendError('catch exception: '.$exMessage, 500);
         }
     }
 
@@ -38,25 +54,54 @@ class CategoryController extends APIController
      * @param  \Illuminate\Http\Request  $request
      * @return \Illuminate\Http\Response
      */
-    public function store(Request $request)
+    /**
+    * @OA\Post(
+    *     path="/api/category",
+    *     operationId="categoryStore",
+    *     tags={"Category"},
+    *     summary="Create Category",
+    *     description="Create Category",
+    *     security={
+    *         {
+    *              "Authorization": {}
+    *         }
+    *     },
+    *     @OA\Parameter(
+    *         name="category",
+    *         description="content of category",
+    *         required=true,
+    *         in="query",
+    *         @OA\Schema(
+    *             type="string"
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=201,
+    *         description="Category created."
+    *     ),
+    *     @OA\Response(
+    *         response=400,
+    *         description="A kind of {request errors from Validator}."
+    *     ),
+    *     @OA\Response(
+    *         response="500",
+    *         description="Server Internal Error."
+    *     ),
+    * )
+    * Create a category
+    */
+    public function store(AddCategoryFormRequest $request)
     {
+        $input = $request->input();
+
         try {
-            $input = $request->input();
-
-            $validator = Validator::make($input, [
-                'category' => 'required',
-            ]);
-
-            if ($validator->fails()) {
-                return $this->sendError($validator->errors());
-            }
 
             $response = $this->categoryService->create($input);
 
             return $this->sendResponse($response, 'Category created.', 201);
-        } catch (QueryException $e) {
-            echo $e;
-            return $this->sendError('Server Internal Error.', 500);
+        } catch (\Exception $e) {
+            $exMessage = $e->getMessage();
+            return $this->sendError('catch exception: '.$exMessage, 500);
         }
     }
 
@@ -66,6 +111,37 @@ class CategoryController extends APIController
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
+    /**
+    * @OA\Get(
+    *     path="/api/category/{id}",
+    *     operationId="categoryShow",
+    *     tags={"Category"},
+    *     summary="Get an category",
+    *     description="Get an category",
+    *     @OA\Parameter(
+    *         name="id",
+    *         description="Category id",
+    *         required=true,
+    *         in="path",
+    *         @OA\Schema(
+    *             type="integer"
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=200,
+    *         description="Category fetched."
+    *     ),
+    *     @OA\Response(
+    *         response=404,
+    *         description="Category does not exist."
+    *     ),
+    *     @OA\Response(
+    *         response="500",
+    *         description="Server Internal Error."
+    *     ),
+    * )
+    * Show a category
+    */
     public function show($id)
     {
         try {
@@ -76,9 +152,9 @@ class CategoryController extends APIController
             }
 
             return $this->sendResponse($response, 'Category fetched.');
-        } catch (QueryException $e) {
-            echo $e;
-            return $this->sendError('Server Internal Error.', 500);
+        } catch (\Exception $e) {
+            $exMessage = $e->getMessage();
+            return $this->sendError('catch exception: '.$exMessage, 500);
         }
     }
 
@@ -100,6 +176,46 @@ class CategoryController extends APIController
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
+    /**
+    * @OA\Delete(
+    *     path="/api/category/{id}",
+    *     operationId="categoryDeStroy",
+    *     tags={"Category"},
+    *     summary="Delete Category",
+    *     description="Delete Category",
+    *     security={
+    *         {
+    *              "Authorization": {}
+    *         }
+    *     },
+    *     @OA\Parameter(
+    *         name="id",
+    *         description="Category id",
+    *         required=true,
+    *         in="path",
+    *         @OA\Schema(
+    *             type="integer"
+    *         )
+    *     ),
+    *     @OA\Response(
+    *         response=200,
+    *         description="Category deleted."
+    *     ),
+    *     @OA\Response(
+    *         response=400,
+    *         description="Delete Category failed."
+    *     ),
+    *     @OA\Response(
+    *         response=404,
+    *         description="Category does not exist."
+    *     ),
+    *     @OA\Response(
+    *         response="500",
+    *         description="Server Internal Error."
+    *     ),
+    * )
+    * Delete a category
+    */
     public function destroy($id)
     {
         try {
@@ -116,9 +232,9 @@ class CategoryController extends APIController
             } else {
                 return $this->sendError('Delete Category failed.', 400);
             }
-        } catch (QueryException $e) {
-            echo $e;
-            return $this->sendError('Server Internal Error.', 500);
+        } catch (\Exception $e) {
+            $exMessage = $e->getMessage();
+            return $this->sendError('catch exception: '.$exMessage, 500);
         }
     }
 }
